# pypi-deps-cli

./: README.md  pyproject.toml
src/pypi_deps_cli/: __init__.py  check.py  cli.py
tests/: test_smoke.py
