[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi-deps-cli"
version = "0.1.0"
description = "CLI to query PyPI package dependencies and metadata"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = [
    "requests",
]

[project.scripts]
pypi-deps = "pypi_deps_cli.cli:main"

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/pypi-deps-cli"
Repository = "https://github.com/oldrepublicwizard/pypi-deps-cli"

[tool.setuptools.packages.find]
where = ["src"]
